fix token image not showing up in swap token picker

--- a/src/layouts/InterfaceLayout/containers/SwapContainer/components/SwapCurrencyPicker/SwapCurrencyPicker.scss
+++ b/src/layouts/InterfaceLayout/containers/SwapContainer/components/SwapCurrencyPicker/SwapCurrencyPicker.scss
@@ -13,7 +13,7 @@
     color: $dark-blue-12 !important;
   }
 
-  figure {
+  img {
     //margin-right: 15px;
     height: 30px;
     width: 30px;
@@ -26,8 +26,8 @@
 }
 
 .token-icon {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   text-align: center;
   //padding: 1px;
